# internal/model/user.go
@@ -17,3 +17,12 @@ type User struct {
 	ModifiedDate types.SQLNullTime `db:"modified_date"`
 	IsDeleted    bool              `db:"is_deleted"`
 }
+
+type UserRole struct {
+	ID       int64               `db:"id"`
+	Name     string              `db:"name"`
+	Email    string              `db:"email"`
+	Password string              `db:"password"`
+	RoleID   int64               `db:"role_id"`
+	RoleName types.SQLNullString `db:"role_name"`
+}
